--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
+								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/story-squad.jpg" alt="" /></a>
 								<h3><a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank">Co-Make App</a></h3>
 								<h4>Node | Express | PostgresQL</h4>
 							</article>
@@ -105,14 +105,14 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/box-model.PNG" alt="" /></a>
+								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
 								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Box Model Practice </a></h3>
 								<p>Using Box Model as CSS Practice.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/flexbox-model.PNG" alt="" /></a>
+								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/droom.jpg" alt="" /></a>
 								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Flexbox Practice </a></h3>
 								<p>Implement Flexbox model.</p>
 							</article>
