--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h1>Hello, I'm <strong>Mosharraf Musa</strong>.</h1>
 						</header>
 						<p>I'm a <strong>Full-Stack Web Developer.</strong> I love to develop unique things, That make your business a differene!</p>
-						<a href="#work" class="button large scrolly">Learn about what I do</a>
+						<a href="#work" class="button large scrolly">View my work</a>
 					</div>
 				</div>
 			</div>
@@ -73,12 +73,12 @@
 								<p>A successful web developer must need the critical thinking quality. My critical thinking ability helps to deconstruct a problem into its base components and figure out the most effective way to solve it. </p>
 							</section>
 						</div>
-					</div>
-					<footer>
+					<!-- <!-- </div> -->
+					<!-- <footer>
 						<p>The work I provide is of highest quality, fully responsive, and tested in a wide range of devices. I take great care to ensure each project is well-documented and easily maintainable so you can enhance a website as your company grows.</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
+					</footer> -->
+				<!-- </div> --> -->
 			</article>
 
 		<!-- Portfolio -->
@@ -132,10 +132,10 @@
 							</article>
 						</div>
 					</div>
-					<footer>
+					<!-- <footer>
 						<p>Enquire about hiring Mosharraf?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
+					</footer> -->
 				</div>
 			</article>
 
