--- a/index.html
+++ b/index.html
@@ -46,13 +46,35 @@
 				<div class="container">
 					<header>
 						<h1>About Me</h1>
-						<p>My focus is to make a unique web Application that convert visitors into customers & help your business grow.</p>
+						<p>I'm a full stack developer currently located in Bronx, New York.
+						 I've recently graduated from Lambda School. Navigate to Projects 
+						 to find a list of projects that I have taken part of
+						(made during the coursework working in teams of students). 
+						You can find more repos and details in my Github and LinkedIn profile.
+						If you have any questions for me feel free to reach out to me through email.</p>
+
+                     <h5>Currently my skills are:</h5> 
+					 <ul>
+					  <li>JavaScript</li>
+					  <li>Python</li>
+					  <li>ReactJS/Redux</li>
+					  <li>NodeJS/ExpressJS</li>
+					  <li>CSS/LESS/SASS</li>
+					  <li>PostgreSQL/SQlite3</li>
+					  <li>Git Version Control</li>
+					  <li>JavaScript</li>
+					  </ul>
+                    <h5>Also I'm currently learning:</h5>
+					<ul> 
+					<li>Firebase</li>
+					<li>AWS</li>
+					<li>GraphQL</li>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!--<span class="icon featured fa-comments"></span>-->
-								<img src="images/mhm1.png" alt="" width="120" height="100">
+								<img src="images/mhm1.png" alt="" width="100" height="80">
 								<h3>Details Oriented</h3>
 								<p>Web development is all about the details. As a detail oriented person, I have patience and determination to explore the problem & Proactive attitude that focuses on creating ideas and plans for correcting issues.</p>
 							</section>
@@ -60,7 +82,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!--<span class="icon solid featured fa-camera-retro"></span>-->
-								<img src="images/mhm2.png" alt="" width="120" height="100">
+								<img src="images/mhm2.png" alt="" width="100" height="80">
 								<h3>Ability To Adapt</h3>
 								<p>In the field of web development, the frameworks & tools are changing and updating at a rapid pace, so being able to adapt quickly and work well with others is more important than knowing any particular technology.</p>
 							</section>
@@ -68,7 +90,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!--<span class="icon featured fa-thumbs-up"></span>-->
-								<img src="images/mhm3.png" alt="" width="120" height="100">
+								<img src="images/mhm3.png" alt="" width="100" height="80">
 								<h3>Critical Thinking</h3>
 								<p>A successful web developer must need the critical thinking quality. My critical thinking ability helps to deconstruct a problem into its base components and figure out the most effective way to solve it. </p>
 							</section>
