--- a/index.html
+++ b/index.html
@@ -53,22 +53,10 @@
 						You can find more repos and details in my Github and LinkedIn profile.
 						If you have any questions for me feel free to reach out to me through email.</p>
 
-                     <h5>Currently my skills are:</h5> 
-					 <ul>
-					  <li>JavaScript</li>
-					  <li>Python</li>
-					  <li>ReactJS/Redux</li>
-					  <li>NodeJS/ExpressJS</li>
-					  <li>CSS/LESS/SASS</li>
-					  <li>PostgreSQL/SQlite3</li>
-					  <li>Git Version Control</li>
-					  <li>JavaScript</li>
-					  </ul>
-                    <h5>Also I'm currently learning:</h5>
-					<ul> 
-					<li>Firebase</li>
-					<li>AWS</li>
-					<li>GraphQL</li>
+                     <p><strong>Currently my skills are:</strong> JavaScript, Python, ReactJS/Redux, NodeJS/ExpressJS
+					 PostgreSQL/SQlite3, Git Version Control</p> 
+					  
+                    <p><strong>Also I'm currently learning:</strong> Firebase, AWS, GraphQL</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -95,12 +83,7 @@
 								<p>A successful web developer must need the critical thinking quality. My critical thinking ability helps to deconstruct a problem into its base components and figure out the most effective way to solve it. </p>
 							</section>
 						</div>
-					<!-- <!-- </div> -->
-					<!-- <footer>
-						<p>The work I provide is of highest quality, fully responsive, and tested in a wide range of devices. I take great care to ensure each project is well-documented and easily maintainable so you can enhance a website as your company grows.</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer> -->
-				<!-- </div> --> -->
+					
 			</article>
 
 		<!-- Portfolio -->
