--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<header>
 							<h1>Hello, I'm <strong>Mosharraf Musa</strong>.</h1>
 						</header>
-						<p>I'm a <strong>Full-Stack Web Developer.</strong> I love to develop unique things, That make your business a differene!</p>
+						<p>I'm a <strong>Full-Stack Web Developer.</strong> I love to develop unique things, that make your business a differene!</p>
 						<a href="#work" class="button large scrolly">View my work</a>
 					</div>
 				</div>
@@ -107,44 +107,51 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/story-squad.jpg" alt="" /></a>
-								<h3><a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank">Co-Make App</a></h3>
-								<h4>Node | Express | PostgresQL</h4>
+								<a href="https://github.com/MosharrafMusa/story-squad-fe/tree/feature/parent-contact-us-page" target="_blank" class="image featured"><img src="images/story-squad.jpg" alt="" /></a>
+								<h3>Story Squad</h3>
+								<h4>JavaScript| React| Ant Design| LESS</h4>
+								<h4 style="color:blue"><a href="https://github.com/MosharrafMusa/story-squad-fe/tree/feature/parent-contact-us-page" target="_blank" style="text-decoration: underline">Github</a></h4>
+								
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/better-prof-app.jpg" alt="" /></a>
-								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Better Professor App </a></h3>
-								<p>Practice Git with Dev Team.</p>
+								<a href="https://github.com/better-prof1/fe-1/tree/Mosharraf-Musa" target="_blank" class="image featured"><img src="images/better-prof-app.jpg" alt="" /></a>
+								<h3>Better Professor App</h3>
+								<h4>React| Redux| Material UI| Jest</h4>
+								<h4 style="color:blue"><a href="https://github.com/better-prof1/fe-1/tree/Mosharraf-Musa" target="_blank" style="text-decoration: underline">Github</a> <span><a href="https://better-pfofessor-mosharrafmusa.netlify.app/" target="_blank" style="text-decoration: underline; padding-left: 15px">Demo</a></span></h4>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
-								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Box Model Practice </a></h3>
-								<p>Using Box Model as CSS Practice.</p>
+								<a href="https://github.com/BW-CoMake/Back-end/tree/Mosharraf-Musa" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
+								<h3>Co-Make App</h3>
+								<h4>Node| Express| PostgreSQL| JWT</h4>
+								<h4 style="color:blue"><a href="https://github.com/BW-CoMake/Back-end/tree/Mosharraf-Musa" target="_blank" style="text-decoration: underline">Github</a> <span><a href="https://documenter.getpostman.com/view/12183930/T1Ds8v5X" target="_blank" style="text-decoration: underline; padding-left: 15px">Demo</a></span></h4>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/droom.jpg" alt="" /></a>
-								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Flexbox Practice </a></h3>
-								<p>Implement Flexbox model.</p>
+								<a href="https://github.com/MosharrafMusa/Car-Sales/tree/Mosharraf-Musa" target="_blank" class="image featured"><img src="images/car-sales.jpg" alt="" /></a>
+								<h3>Car Sales</h3>
+								<h4>React| Redux|CSS</h4>
+								<h4 style="color:blue"><a href="https://github.com/MosharrafMusa/Car-Sales/tree/Mosharraf-Musa" target="_blank" style="text-decoration: underline">Github</a> <span><a href="https://car-sales-kappa.vercel.app/" target="_blank" style="text-decoration: underline; padding-left: 15px">Demo</a></span></h4>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://codepen.io/mhmusa/pen/WNbbGNw" target="_blank" class="image featured"><img src="images/user-interface.PNG" alt="" /></a>
-								<h3><a href="https://codepen.io/mhmusa/pen/WNbbGNw" target="_blank">User Interface</a></h3>
-								<p>Practice User Interface.</p>
+								<a href="https://github.com/MosharrafMusa/nasa-photo-of-the-day/tree/Mosharraf-Musa" target="_blank" class="image featured"><img src="images/nasa-photo.png" alt="" /></a>
+								<h3>NASA Photo of the Day</h3>
+								<h4>React|Styled-Comp|Boostrap</h4>
+								<h4 style="color:blue"><a href="https://github.com/MosharrafMusa/nasa-photo-of-the-day/tree/Mosharraf-Musa" target="_blank" style="text-decoration: underline">Github</a> <span><a href="https://nasa-photo-of-the-day-roan.vercel.app/" target="_blank" style="text-decoration: underline; padding-left: 15px">Demo</a></span></h4>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/responsive.PNG" alt="" /></a>
-								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Responsive Web</a></h3>
-								<p>Practice Responsive Web Application.</p>
+								<a href="https://github.com/Build-Week-Droom-3/droom3-marketing-page-2" target="_blank" class="image featured"><img src="images/droom.jpg" alt="" /></a>
+								<h3>Droom-3 App</h3>
+								<h4>HTML5|CSS3|LESS|JS</h4>
+								<h4 style="color:blue"><a href="https://github.com/Build-Week-Droom-3/droom3-marketing-page-2" target="_blank" style="text-decoration: underline">Github</a> <span><a href="https://droom-mosharraf.netlify.app/" target="_blank" style="text-decoration: underline; padding-left: 15px">Demo</a></span></h4>
 							</article>
 						</div>
 					</div>
