Add Updated Files - Because added my calendly and Agora App Builder URL.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 							<li><a href="#one">Who am I</a></li>
 							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#four">Video chat with me </a></li>
+
 						</ul>
 					</nav>
 				</div>
@@ -37,7 +39,7 @@
 						<div class="inner">
 							<img src="images/Cat.jpg" alt="Cat's professional pic'" width="400" height="430">
 							<h1>Catherine Kim</h1>
-							<p>I'm a full-stack web developer. I love technology and working with people! My goal is to create human-centered web design and applications.</p>
+							<p>I'm a Technical Customer Success Manager at Agora.io. I love technology and working with people! My goal is to create human-centered web design and applications.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">VIEW PROJECTS</a></li>
 							</ul>
@@ -202,6 +204,8 @@
 												<li><a href="https://github.com/Catherinesjkim" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.instagram.com/catherinesjkim/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/catherine-kim-10878418/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://calendly.com/catherinesjkim" class="Calendly"><span class="label">Calendly</span></a></li>
+
 											</ul>
 										</li>
 									</ul>
@@ -210,6 +214,16 @@
 						</div>
 					</section>
 
+					<!-- Four -->
+					<section id="fopur" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Video chat with me</h2>
+							<p>Let me know if you would like to do pair programming and work on a project together. Cheers!</p>
+								<h3>Social</h3>
+								<ul class="url">
+									<li><a href="https://ckpy9zcaw1756547jwd2pfoeou-m7y3j0rz4-catherinesjkim.vercel.app/dcaa88fa-48dd-48c3-a6a6-d6946400a240" class="Agora App Builder"><span class="label">Agora.io</span></a></li>	
+						</div>
+					</section>
 			</div>
 
 		<!-- Footer -->
