--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who am I</a></li>
+							<li><a href="#one">Projects</a></li>
 							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
-							<li><a href="#four">Video chat with me </a></li>
-
+							<li><a href="#four">Video chat with me</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -39,7 +38,7 @@
 						<div class="inner">
 							<img src="images/Cat.jpg" alt="Cat's professional pic'" width="400" height="430">
 							<h1>Catherine Kim</h1>
-							<p>I'm a Technical Customer Success Manager at Agora.io. I love technology and working with people! My goal is to create human-centered web design and applications.</p>
+							<p>I'm a Technical Customer Success Manager at Agora.io. I love technology and working with people! My goal is to create human-centered web apps & APIs.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">VIEW PROJECTS</a></li>
 							</ul>
@@ -204,8 +203,6 @@
 												<li><a href="https://github.com/Catherinesjkim" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.instagram.com/catherinesjkim/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/catherine-kim-10878418/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-												<li><a href="https://calendly.com/catherinesjkim" class="Calendly"><span class="label">Calendly</span></a></li>
-
 											</ul>
 										</li>
 									</ul>
@@ -214,13 +211,14 @@
 						</div>
 					</section>
 
-					<!-- Four -->
-					<section id="fopur" class="wrapper style1 fade-up">
+				<!-- Four -->
+					<section id="four" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Video chat with me</h2>
-							<p>Let me know if you would like to do pair programming and work on a project together. Cheers!</p>
-								<h3>Social</h3>
-								<ul class="url">
+							<p>Let me know if you would like to chat with me. Cheers!</p>
+							<h3>Schedule & Video Chat</h3>
+								<ul class="url1">
+									<li><a href="https://calendly.com/catherinesjkim" class="Calendly"><span class="label">Calendly</span></a></li>
 									<li><a href="https://ckpy9zcaw1756547jwd2pfoeou-m7y3j0rz4-catherinesjkim.vercel.app/dcaa88fa-48dd-48c3-a6a6-d6946400a240" class="Agora App Builder"><span class="label">Agora.io</span></a></li>	
 						</div>
 					</section>
