projects have been added with links to the github repositories

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,8 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header">
+
+		<!-- <header id="header">
 			<h1 id="logo"><a href="index.html">Landed</a></h1>
 			<nav id="nav">
 				<ul>
@@ -47,10 +48,11 @@
 						</ul>0
 					</li>
 					<!-- <li><a href="elements.html">Elements</a></li> -->
-					<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
-				</ul>
-			</nav>
+		<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
+		</ul>
+		</nav>
 		</header>
+		-->
 
 		<!-- Banner -->
 		<section id="banner">
@@ -151,27 +153,46 @@
 		<section id="four" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
-					<h2>Accumsan sed tempus adipiscing blandit</h2>
-					<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+					<h2>Projects</h2>
+					<p>Projects with Github links are provided</p>
 				</header>
 				<div class="box alt">
 					<div class="row gtr-uniform">
+
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-chart-area"></span>
-							<h3>Ipsum sed commodo</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<a href="https://github.com/Ironipad64/deprecated-labs34-bg-emotion-tracker-fe-a">
+								<span href="https://github.com/Ironipad64/deprecated-labs34-bg-emotion-tracker-fe-a"
+									class="icon solid alt major fa-chart-area">
+								</span>
+								<h3>Boys & Girls Club Emotion Tracker</h3>
+								<h5>Tech Stack: React, Java(Spring)</h5>
+								<p> Built and managed an emotion tracker web application for the Boys and Girls Club of
+									Conejo Valley, created and planned the workflow of the project to ensure that my
+									team
+									could build the project successfully and on time.
+								</p>
+							</a>
+						</section>
+
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<a href="https://github.com/tt72-bw-cookbook/frontend-cookbook">
+								<span class="icon solid alt major fa-comment"></span>
+								<h3>Recipe Cookbook</h3>
+								<h5>Tech Stack: React, Java(Spring)</h5>
+								<p>Constructed design on an online recipe site so you can sign up, add in recipes, and
+									even
+									change the background color.</p>
+							</a>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-comment"></span>
-							<h3>Eleifend lorem ornare</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<a href="https://github.com/tt72-AfricanMarket/frontend">
+								<span class="icon solid alt major fa-flask"></span>
+								<h3>African Trade Website</h3>
+								<h5>Tech Stack: React, Node.js</h5>
+								<p>Online African trade website, where anyone can trade or buy online</p>
+							</a>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-flask"></span>
-							<h3>Cubilia cep lobortis</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
+						<!-- <section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-paper-plane"></span>
 							<h3>Non semper interdum</h3>
 							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
@@ -185,12 +206,12 @@
 							<span class="icon solid alt major fa-lock"></span>
 							<h3>Massa arcu accumsan</h3>
 							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
+						</section> -->
 					</div>
 				</div>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="#" class="button">Magna sed feugiat</a></li>
+						<li><a href="#" class="button">Back to Top</a></li>
 					</ul>
 				</footer>
 			</div>
@@ -200,21 +221,21 @@
 
 
 		<!-- <section id="five" class="wrapper style2 special fade">
-		<div class="container">
-			<header>
-				<h2>Magna faucibus lorem diam</h2>
-				<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-			</header>
-			<form method="post" action="#" class="cta">
-				<div class="row gtr-uniform gtr-50">
-					<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
-							placeholder="Your Email Address" /></div>
-					<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" />
+			<div class="container">
+				<header>
+					<h2>Magna faucibus lorem diam</h2>
+					<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+				</header>
+				<form method="post" action="#" class="cta">
+					<div class="row gtr-uniform gtr-50">
+						<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
+								placeholder="Your Email Address" /></div>
+						<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" />
+						</div>
 					</div>
-				</div>
-			</form>
-		</div>
-	</section> -->
+				</form>
+			</div>
+		</section> -->
 
 		<!-- Footer -->
 		<footer id="footer">
