--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,34 +25,11 @@
 
 		<!-- Header -->
 
-		<!-- <header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
-			<nav id="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>0
-					</li>
-					<!-- <li><a href="elements.html">Elements</a></li> -->
-		<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
-		</ul>
-		</nav>
+		<header id="header">
+			<h1 id="logo"><a href="index.html">Ismael</a></h1>
+
 		</header>
-		-->
+
 
 		<!-- Banner -->
 		<section id="banner">
