updated about and intro

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>I am 21 years old Front End Developer with some back end experience. I develop and design functional web applications using latest web standadrs as the main prinicples.</p>
+								<p>Lambda School Alumni. Graduated in September of 2021. I am a young developer with a entreprenuer heart and passion to help others.</p>
 							</article>
 
 						<!-- Work -->
@@ -92,7 +92,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/Galaxy Motivation LinkedIn Post Header.jpg" alt="motivation" /></span>
-								<p>I am a student of Lambda School. Studying full stack development. I believe culture is one of the biggest deciding factors of success and failure. Passionate about helping youth to find their passions and to chasing them!</p>
+								<p>I am an Alumni of Lambda School. Studied full stack development. I believe culture is one of the biggest deciding factors of success and failure. Passionate about helping youth to find their passions and to chasing them!</p>
 							</article>
 
 						<!-- Contact -->
