added a picture to lambda eats feature

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Screen Shot 2021-10-07 at 6.31.44 AM (3).png" alt="" />
+							<img src="images/Screen Shot 2021-10-07 at 6.31.44 AM (3).png" alt="Picture of Lambda Eats Homepage" />
 						</div>
 					</section>
 
