--- a/generic.html
+++ b/generic.html
@@ -101,8 +101,8 @@
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
-					<p>1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000</p>
+					<p>4631 Old Cheny rd Apt #4<br />
+						Lincoln, NE 68516</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
