deleted elements.html and uncessary code

--- a/generic.html
+++ b/generic.html
@@ -30,7 +30,6 @@
 			<ul class="links">
 				<li><a href="index.html">Projects</a></li>
 				<li class="active"><a href="generic.html">My Story</a></li>
-				<li><a href="elements.html">Elements Reference</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -110,7 +109,7 @@
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="#">dwiyual@gmail.com</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
