--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+QA1<html>
 
 <head>
 	<title>Dak Wiyual Portfolio</title>
@@ -60,7 +60,7 @@
 					<span class="date">April 25, 2017</span>
 					<h2>Projects</h2>
 					<p>These are some of the project that I have so far, and I plan on have more
-						in the future as I progress through Lamda's Fullstack Course!
+						in the future as I progress through Lambda's Fullstack Course!
 					</p>
 				</header>
 				<a href="#" class="image main"><img src="images/pexels-kevin-ku-577585.jpg" alt="" /></a>
@@ -73,8 +73,51 @@
 			<section class="posts">
 				<article>
 					<header>
+						<span class="date">April 7, 2017</span>
+						<h2><a href="#">Trotter-Floor-Cleaning-Website<br />
+								in React Js</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+					<p>This is version of Trotter Floor Cleaning Website I built using React js. I also
+						used reactstrap for some of the components. </p>
+					<ul class="actions special">
+						<li><a href="https://github.com/dwiyual/trotter-site" class="button">Repository</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date"></span>
+						<h2><a href="#">Trotter Floor cleaning site<br />
+							</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+					<p>This project was the first version of the website I am building for Trotter
+						Floor Cleaning. I built it with html,css, and Javascript. This was before I learned reactjs.
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/dwiyual/Trotter-Floor-Cleaning-Website" class="button">Full Story</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">April 14, 2017</span>
+						<h2><a href="#">User-Interface<br />
+								Sprint Challenge</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+					<p>This project was our final user interface challenge in our course and we had to demonstrate our
+						understanding of the concepts we learned earlier in the program such as semantic html markup,
+						css, flexbox,
+						and Git.
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/dwiyual/Sprint-Challenge--User-Interface" class="button">Repository</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
 						<span class="date">04/27/20</span>
-						<h2><a href="https://github.com/dwiyual/responsive-web-design-I">Resonsive<br />
+						<h2><a href="https://github.com/dwiyual/responsive-web-design-I">Responsive<br />
 								Web Design</a></h2>
 					</header>
 					<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -109,48 +152,7 @@
 						<li><a href="https://github.com/dwiyual/UI-III-Flexbox" class="button">Repository</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<span class="date">April 14, 2017</span>
-						<h2><a href="#">User-Interface<br />
-								Sprint Challenge</a></h2>
-					</header>
-					<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-					<p>This project was our final user interface challenge in our course and we had to demonstrate our
-						understanding of the concepts we learned earlier in the program such as semantic html markup,
-						css, flexbox,
-						and Git.
-					</p>
-					<ul class="actions special">
-						<li><a href="https://github.com/dwiyual/Sprint-Challenge--User-Interface" class="button">Repository</a></li>
-					</ul>
-				</article>
-				<article>
-					<header>
-						<span class="date">April 11, 2017</span>
-						<h2><a href="#">Odio magna<br />
-								sed consectetur</a></h2>
-					</header>
-					<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
-					</ul>
-				</article>
-				<article>
-					<header>
-						<span class="date">April 7, 2017</span>
-						<h2><a href="#">Augue lorem<br />
-								primis vestibulum</a></h2>
-					</header>
-					<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
-					</ul>
-				</article>
+				
 			</section>
 
 			<!-- Footer -->
