--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Kristha Hernandez Portfolio</h1>
+								<h1>Kato Hernandez Portfolio</h1>
 								<p>Full Stack Web Developer</p>
 							</div>
 						</div>
@@ -67,6 +67,10 @@
 								<h2>Car Sales App</h2>
 								<p>This project focuses on implementing Redux to manage the state for this React application. </p>
 								<a href="https://car-sales-xi.vercel.app" class="button"> View Code</a>
+								<br> </br>
+								<h2>Nudge Budge Expense Tracker App</h2>
+								<p>This project focuses on implementing context api React application. </p>
+								<a href="https://nudgebudgeexpensetracker.netlify.app/" class="button"> View Code</a>
 							</article>
 
 						<!-- Contact -->
@@ -346,7 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						
 					</footer>
 
 			</div>
