Automationn, Testing, and Integrations skills added.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </a>
               <h3>Web Development</h3>
               <p>
-                HTML, CSS, Javascript, React, Redux, Node, SQL, Python, Selenium, Postman, and Docker
+                HTML, CSS, Javascript, React, Redux, Node, SQL, Docker, GCP
               </p>
             </section>
             <section>
@@ -129,28 +129,27 @@
               <p>Swift, Xcode, React Native</p>
             </section>
 
-            
             <section>
               <a href="https://github.com/EpicGames">
               <span class="icon style2 major fa-cubes"></span>
             </a>
-              <h3>3d Printing</h3>
+              <h3>Automation</h3>
               <p>
-                Ultimaker Cura, Creality Slicer, Blender
+                Python, RabbitMQ, Selenium, Postman
               </p>
             </section>
             <section>
               <a href="https://github.com/EpicGames">
               <span class="icon style2 major fa-child"></span>
             </a>
-              <h3>Virtual Reality</h3>
-              <p>Unreal Engine, Unity, 3d graphic design and implementation, Blueprints, C++</p>
+              <h3>Testing</h3>
+              <p>Jest, PyCharm, Mabel</p>
             </section>
 
             <section>
               <span class="icon style2 major fa-diamond"></span>
-              <h3>Robotics</h3>
-              <p>Arduino designs with Wifi, Bluetooth, RFID, LCDs, buttons, joysticks, motors, sensors, etc.</p>
+              <h3>Integrations</h3>
+              <p>APIs, Users, Documents, Calendars, with multiple 3rd party products</p>
             </section>
             <!-- <section>
               <a href="https://github.com/EpicGames">
