--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             solutions!
           </p>
           <p>
-            Involved in many projects including Web, iOS, Android, VR,
+            Involved in many projects including Web, iOS, Automation, Android, VR,
             IR, music production, 3D Modeling, 3D Printing, gaming, and other exciting ventures.
           </p>
           <ul class="actions stacked">
